NetBSD Problem Report #45578

From taca@back-street.net  Sun Nov  6 11:34:05 2011
Return-Path: <taca@back-street.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 6B46763B974
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  6 Nov 2011 11:34:05 +0000 (UTC)
Message-Id: <20111106113400.4D508B2B2@edge.back-street.net>
Date: Sun,  6 Nov 2011 20:34:00 +0900 (JST)
From: taca@back-street.net
Reply-To: taca@back-street.net
To: gnats-bugs@gnats.NetBSD.org
Subject: kernel crash with BUFQ_PRIOCSCAN
X-Send-Pr-Version: 3.95

>Number:         45578
>Category:       kern
>Synopsis:       kernel crash with BUFQ_PRIOCSCAN
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    hannken
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Nov 06 11:35:00 +0000 2011
>Closed-Date:    Tue Nov 08 08:26:25 +0000 2011
>Last-Modified:  Tue Nov 08 08:26:25 +0000 2011
>Originator:     Takahiro Kambe
>Release:        NetBSD 5.99.56
>Organization:
Takahiro Kambe
>Environment:


System: NetBSD edge.back-street.net 5.99.56 NetBSD 5.99.56 (VMWARE-F3) #109: Sun Nov 6 18:35:36 JST 2011 taca@edge.back-street.net:/data/amd64/obj/sys/arch/amd64/compile/VMWARE-F3 amd64
Architecture: x86_64
Machine: amd64
>Description:
	Recent kernel crash with BUFQ_PRIOCSCAN.
	savecore(8) logs:

	panic: kernel diagnostic assertion "pq->q_burst > 0" failed: file "/usr/src/sys/kern/bufq_priocscan.c", line 300

>How-To-Repeat:
	Enable BUFQ_PRIOCSCAN and try some (heavy) file system access.

	NetBSD current 1st Nov. 2011 didn't have this problem.

>Fix:
	Unknown.  Temporary workaround is disable BUFQ_PRIOCSCAN.

>Release-Note:

>Audit-Trail:
From: "Juergen Hannken-Illjes" <hannken@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45578 CVS commit: src/sys/kern
Date: Mon, 7 Nov 2011 08:44:17 +0000

 Module Name:	src
 Committed By:	hannken
 Date:		Mon Nov  7 08:44:16 UTC 2011

 Modified Files:
 	src/sys/kern: bufq_priocscan.c

 Log Message:
 Move an assertion to the right place.

 Ok: YAMAMOTO Takashi <yamt@netbsd.org>

 Fixes PR #45578 (kernel crash with BUFQ_PRIOCSCAN)


 To generate a diff of this commit:
 cvs rdiff -u -r1.15 -r1.16 src/sys/kern/bufq_priocscan.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: kern-bug-people->hannken
Responsible-Changed-By: hannken@NetBSD.org
Responsible-Changed-When: Tue, 08 Nov 2011 08:02:25 +0000
Responsible-Changed-Why:
Take.


State-Changed-From-To: open->feedback
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Tue, 08 Nov 2011 08:02:25 +0000
State-Changed-Why:
Should be fixed with bufq_priocscan.c rev. 1.16 -- please confirm.


From: Takahiro Kambe <taca@back-street.net>
To: gnats-bugs@NetBSD.org, hannken@NetBSD.org
Cc: 
Subject: Re: kern/45578 (kernel crash with BUFQ_PRIOCSCAN)
Date: Tue, 08 Nov 2011 15:17:04 +0900 (JST)

 In message <20111108080226.2ACDB63B896@www.NetBSD.org>
 	on Tue,  8 Nov 2011 08:02:26 +0000 (UTC),
 	hannken@NetBSD.org wrote:
 > State-Changed-From-To: open->feedback
 > State-Changed-By: hannken@NetBSD.org
 > State-Changed-When: Tue, 08 Nov 2011 08:02:25 +0000
 > State-Changed-Why:
 > Should be fixed with bufq_priocscan.c rev. 1.16 -- please confirm.
 Works fine now, thanks much!

 -- 
 Takahiro Kambe <taca@back-street.net>

State-Changed-From-To: feedback->closed
State-Changed-By: hannken@NetBSD.org
State-Changed-When: Tue, 08 Nov 2011 08:26:25 +0000
State-Changed-Why:
Submitter confirmed fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.