Move an assertion to the right place.

Ok: YAMAMOTO Takashi <yamt@netbsd.org>

Fixes PR #45578 (kernel crash with BUFQ_PRIOCSCAN)